// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OperationsGraph> "Couldn’t fetch data" displayed 1`] = `
<div
  className="ops-graph-placeholder"
>
  Couldn’t fetch data
</div>
`;

exports[`<OperationsGraph> "Mo data" is displayed 1`] = `
<div
  className="ops-graph-placeholder"
>
  No Data
</div>
`;

exports[`<OperationsGraph> Graph rendered successfully 1`] = `
<div
  className="ops-container"
>
  <ForwardRef
    height={15}
    width={100}
  >
    <ComposedChart
      barCategoryGap="10%"
      barGap={4}
      data={
        Array [
          Object {
            "x": 1631534436235,
            "y": 0.01,
          },
          Object {
            "x": 1631534496235,
            "y": 0.01,
          },
        ]
      }
      layout="horizontal"
      margin={
        Object {
          "bottom": 1,
          "left": 0,
          "right": 0,
          "top": 2,
        }
      }
      reverseStackOrder={false}
      stackOffset="none"
      syncMethod="index"
    >
      <XAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        dataKey="x"
        height={30}
        hide={true}
        mirror={false}
        orientation="bottom"
        padding={
          Object {
            "left": 0,
            "right": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        type="category"
        width={0}
        xAxisId={0}
      />
      <YAxis
        allowDataOverflow={false}
        allowDecimals={true}
        allowDuplicatedCategory={true}
        height={0}
        hide={true}
        mirror={false}
        orientation="left"
        padding={
          Object {
            "bottom": 0,
            "top": 0,
          }
        }
        reversed={false}
        scale="auto"
        tickCount={5}
        type="number"
        width={60}
        yAxisId={0}
      />
      <Area
        activeDot={true}
        animationBegin={0}
        animationDuration={1500}
        animationEasing="ease"
        connectNulls={false}
        dataKey="y"
        dot={false}
        fill="#FFFFFF"
        fillOpacity={0.6}
        hide={false}
        isAnimationActive={true}
        legendType="line"
        points={Array []}
        stroke="#FFFFFF"
        type="monotone"
        xAxisId={0}
        yAxisId={0}
      />
      <Line
        activeDot={true}
        animateNewValues={true}
        animationBegin={0}
        animationDuration={1500}
        animationEasing="ease"
        connectNulls={false}
        dataKey="y"
        dot={true}
        fill="#fff"
        hide={false}
        isAnimationActive={true}
        label={false}
        legendType="line"
        points={Array []}
        stroke="#FFFFFF"
        strokeWidth={1}
        type="monotone"
        xAxisId={0}
        yAxisId={0}
      />
    </ComposedChart>
  </ForwardRef>
</div>
`;
